--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             <div class="addContact"><input type="text" id="contactName" placeholder="Имя контакта">
                 <input type="tel" id="contactNumber" placeholder="Номер">
                 <input type="text" id="contactAddress" placeholder="Адресс">
+                <input type="file" id="file">
+                <label for="file">Загрузить аватарку</label>
                 <button onclick="addContact()">Добавить</button>
                 <input type="text" id="searchContactName" onkeyup="searchContact()" placeholder="Поиск">
-                <input type="file" id="file">
                  </div>
         </div>
         <div class="contacts-list">
