--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <a href="#"><img src="img/user_2.jpg" alt=""></a>
             </div>
         </div>
-        <div class="productes">
-
+        <div class="products-head"><h1>Продукты</h1></div>
+        <div class="products">
         </div>
         <div class="head-name">
             <h1>Список контактов</h1>
