--- a/index.html
+++ b/index.html
@@ -1,50 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" ng-app="staffList">
 <head>
     <meta charset="UTF-8">
-    <title>Contacts</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Phone list</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-route.js"></script>
+    <script src="js/app.js"></script>
 </head>
-<body onload="printContactsList(downloadOfLocalStorage())">
-    <div class ='container'>
-        <div class="left-menu">
-            <div class="user-img">
-                <a href="#"><img src="img/user_1.jpg" alt=""></a>
-            </div>
-            <div class="user-img">
-                <a href="#"><img src="img/user_2.jpg" alt=""></a>
-            </div>
-        </div>
-        <div class="productes">
-
-        </div>
-        <div class="head-name">
-            <h1>Список контактов</h1>
-        </div>
-        <div class="contact-options">
-            <div class="addContact"><input type="text" id="contactName" placeholder="Имя контакта">
-                <input type="tel" id="contactNumber" placeholder="Номер">
-                <input type="text" id="contactAddress" placeholder="Адресс">
-                <input type="file" id="file">
-                <label for="file">Загрузить аватарку</label>
-                <button onclick="addContact()">Добавить</button>
-                <input type="text" id="searchContactName" onkeyup="searchContact()" placeholder="Поиск">
-                 </div>
-        </div>
-        <div class="contacts-list">
-            <div class="contact-item">
-            </div>
-        </div>
-        <div class="contact-info">
-            <div class="info">
-                <img src="" alt="" id="contactInfoImg">
-                <h3 id="contactInfoName"></h3>
-                <p id="contactInfoNumber"></p>
-                <p id="contactInfoAddress"></p>
-                <button onclick="deleteContact()" id="deleteButton" style="display: none">Удалить</button>
-            </div>
-        </div>
-    </div>
-</body>
-<script src="js.js"></script>
+    <a href="#/login">Login</a>
+    <a href="#/registration">registrqation</a>
+    <ng-view></ng-view>
 </html>
