--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru" ng-app="staffList">
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.20/angular-material.min.css">
 <head>
     <meta charset="UTF-8">
-    <title>Phone list</title>
+    <title>Staff list</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-route.js"></script>
+    <script src="https://unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.20/angular-material.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/registration.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/notEmployed.js"></script>
+    <script src="js/employed.js"></script>
+    <script src="js/dashboard.js"></script>
+    <script src="js/adminDashboard.js"></script>
 </head>
-    <a href="#/login">Login</a>
-    <a href="#/registration">registrqation</a>
-    <ng-view></ng-view>
+<body>
+<div ng-controller="menuCtrl">
+    <md-toolbar md-theme="indigo" class="app-toolbar md-indigo-theme md-whiteframe-z2 fix-top" >
+
+    </md-toolbar>
+    <ul ng-show="isAdmin()">
+        <li><a ui-sref="adminDashboard">Доска Админа</a></li>
+        <li><a ui-sref="registration">Регистрация сотрудников</a></li>
+        <li><a ui-sref="employed">Список устроенных</a></li>
+        <li><a ui-sref="not_employed">Список не устроенных</a></li>
+    </ul>
+    <button ng-click="logout()" ng-show="isLogin()">Выйти</button>
+</div>
+<div layout="row">
+    <div flex="20"></div>
+    <div flex="60" layout="row" layout-align="center center">
+        <div ui-view></div>
+    </div>
+    <div flex="20"></div>
+</div>
+
+</body>
 </html>
