add component employedStaff and notEmployedStaff

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <script src="js/app.js"></script>
     <script src="js/registration.js"></script>
     <script src="js/login.js"></script>
-    <script src="js/notEmployed.js"></script>
-    <script src="js/employed.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/adminDashboard.js"></script>
     <script src="js/department.js"></script>
+    <script src="js/service/staffService.js"></script>
+    <script src="js/component/employedStaff.js"></script>
+    <script src="js/component/instanceEmployee.js"></script>
+    <script src="js/component/notEmployedStaff.js"></script>
 </head>
 <body>
     <div ng-controller="menuCtrl">
