all is component

--- a/index.html
+++ b/index.html
@@ -12,32 +12,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.20/angular-material.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/registration.js"></script>
-    <script src="js/login.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/adminDashboard.js"></script>
-    <script src="js/department.js"></script>
     <script src="js/service/staffService.js"></script>
+    <script src="js/service/departmentsService.js"></script>
+    <script src="js/service/mainService.js"></script>
     <script src="js/component/employedStaff.js"></script>
     <script src="js/component/instanceEmployee.js"></script>
     <script src="js/component/notEmployedStaff.js"></script>
+    <script src="js/component/adminDashboard.js"></script>
+    <script src="js/component/departmentsPage.js"></script>
+    <script src="js/component/addDepartment.js"></script>
+    <script src="js/component/instanceDepartment.js"></script>
+    <script src="js/component/registrationEmployee.js"></script>
+    <script src="js/component/login.js"></script>
+    <script src="js/component/dashboard.js"></script>
+    <script src="js/component/menu.js"></script>
 </head>
 <body>
-    <div ng-controller="menuCtrl">
-        <md-toolbar class="app-toolbar md-indigo-theme md-whiteframe-z2 fix-top" >
-            <div class="md-toolbar-tools" tabindex="0" layout="row" layout-align="end center">
-                <md-button class="md-raised md-warn" ng-click="logout()" ng-show="isLogin()">Выйти</md-button>
-            </div>
-        </md-toolbar>
-        <md-nav-bar layout="row"  layout-align="center center" ng-show="isLogin()">
-            <md-nav-item md-nav-sref="dashboard" ng-hide="isAdmin()">Инфо пользователя</md-nav-item>
-            <md-nav-item md-nav-sref="adminDashboard" ng-show="isAdmin()">Доска управляющего</md-nav-item>
-            <md-nav-item md-nav-sref="departments" ng-show="isAdmin()">Отделы</md-nav-item>
-            <md-nav-item md-nav-sref="registration" ng-show="isAdmin()">Регистрация сотрудника</md-nav-item>
-            <md-nav-item md-nav-sref="employed" ng-show="isAccountant()">Устроенные сотрудники</md-nav-item>
-            <md-nav-item md-nav-sref="not_employed" ng-show="isAdmin()">Не устроенные сотрудники</md-nav-item>
-        </md-nav-bar>
-    </div>
+    <menu style="padding: 0; margin: 0"></menu>
+
     <div layout="row">
         <div flex="20"></div>
         <div flex="60" layout="row">
